--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -639,6 +639,12 @@ section img {
   padding: 0 2px;
 }
 
+.yellow-tag:hover {
+  background: #ffeb9b;
+  color: black;
+}
+
+
 blockquote {
   border-left: 3px solid #ffcc00;
   margin: 0;
@@ -700,7 +706,7 @@ dt {
 
 section {
   max-width: 650px;
-  padding: 30px 0 0 0;
+  padding: 60px 0 0 0;
   margin: 20px 0;
 }
 section #title {
